fix: Fixed overflow in Y axis

--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -8,6 +8,6 @@
 }
 
 .bannerWrapper {
-  @apply flex flex-col w-full h-full items-center justify-center;
-  @apply bg-[#121212] opacity-90;
+  @apply flex flex-col w-full h-full items-center justify-start py-10;
+  @apply bg-[#121212] opacity-90 overflow-y-auto;
 }
